# icarus_signal_processing

./: CMakeLists.txt  GNUmakefile  README.md  setup.sh
Makefile/: GNUmakefile.CORE
icarus_signal_processing/: .depend  AdaptiveWiener.cxx  CMakeLists.txt  CoherentNoiseFFT.cxx  CoherentNoiseFFT.h  Deconvolution.cxx  Deconvolution.h  Denoising.cxx  Denoising.h  FFTFilterFunctions.cxx  FFTFilterFunctions.h  FindROI2D.cxx  FindROI2D.h  GNUmakefile  ICARUSFFT.h  ICARUSSigProcDefs.h  LineDetection.cxx  LinkDef.h  MiscUtils.cxx  MiscUtils.h  Morph1D.cxx  Morph1D.h  Morph1DFast.cxx  Morph1DFast.h  Morph2D.cxx  Morph2D.h  Morph2DFast.cxx  Morph2DFast.h  MorphologicalCNC.cxx  MorphologicalCNC.h  MorphologicalFunctions1D.cxx  MorphologicalFunctions1D.h  MorphologicalFunctions2D.cxx  MorphologicalFunctions2D.h  ROIFinder2D.cxx  ROIFinder2D.h  WaveformTools.cxx  WaveformTools.h
icarus_signal_processing/Detection/: CMakeLists.txt  DisjointSetForest.cxx  DisjointSetForest.h  EdgeDetection.cxx  EdgeDetection.h  LineDetection.cxx  LineDetection.h  LinkDef.h  MorphologicalFunctions1D.cxx  MorphologicalFunctions1D.h  MorphologicalFunctions2D.cxx  MorphologicalFunctions2D.h  Thresholding.cxx  Thresholding.h
icarus_signal_processing/Filters/: AdaptiveWiener.cxx  AdaptiveWiener.h  BilateralFilters.cxx  BilateralFilters.h  CMakeLists.txt  FFTFilterFunctions.cxx  FFTFilterFunctions.h  ICARUSFFT.h  ImageFilters.cxx  ImageFilters.h  LInkDef.h  MiscUtils.cxx  MiscUtils.h
ups/: product_deps
